# Prompt-Kaizen

./: README.md
backend/: .gitignore  Cargo.toml  Dockerfile  fly.toml  openapi.yaml
backend/http/: prompt.http
backend/migrations/: 001_create_prompts.sql  003_add_template_support.sql  004_feedback.sql  005_improvment_suggestion.sql  00_db_setup_migration.sql  1769869662_add_user_id_to_prompts.sql  1769869663_change_user_id_to_uuid.sql
backend/src/: main.rs
backend/src/application/: ai_service.rs  api_key_repository.rs  mod.rs  prompt_repository.rs
backend/src/application/use_cases/: create_prompt.rs  create_version.rs  manage_tags.rs  mod.rs  submit_feedback.rs
backend/src/application/use_cases/api_key/: create.rs  delete.rs  list.rs  mod.rs  revoke.rs
backend/src/application/use_cases/feedback/: delete.rs  mod.rs  submit.rs  update.rs
backend/src/application/use_cases/improvement/: accept.rs  analyze.rs  create.rs  decline.rs  get_for_version.rs  mod.rs
backend/src/application/use_cases/prompt/: create.rs  delete.rs  get.rs  mod.rs  (+2 more)
backend/src/domain/: mod.rs
backend/src/domain/api_key/: api_key.rs  mod.rs
backend/src/domain/prompt/: content_type.rs  feedback.rs  improvement_suggestion.rs  mod.rs  prompt.rs  prompt_type.rs  suggestion_status.rs  tag.rs  test_scenario.rs  version.rs  version_number.rs
backend/src/infrastructure/: mod.rs  openai_service.rs
backend/src/infrastructure/repositories/: in_memory_prompt_repository.rs  mod.rs  postgres_api_key_repository.rs  postgres_prompt_repository.rs
backend/src/interface/web/: mod.rs  routes.rs
(+109 files in other folders)
