[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.43", features = ["serde"]}
sha2 = "0.11.0-rc.4"
hex = "0.4.3"
async-trait = "0.1.89"
uuid = {version = "1.20.0", features = ["v4"]}
tokio = {version = "1.49.0", features = ["sync", "rt-multi-thread"]}
axum = "0.8.8"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["cors"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dotenvy = "0.15"